fixed email section to wrap on iphone

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ a:hover{
 #about {
   background-color: white;
   height: 25%;
-  padding: 78px 16em 78px 16em;
+  padding: 78px 5% 78px 5%;
 }
 #projects {
   background-color: lightgrey;
